apps/production/homarr/cloudflared-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflared
spec:
  selector:
    matchLabels:
      app: cloudflared
  replicas: 1
  template:
    metadata:
      labels:
        app: cloudflared
        policy-type: "app"
    spec:
      containers:
        - name: cloudflared
          image: cloudflare/cloudflared:2025.2.1
          args:
            - tunnel
            - --config
            - /etc/cloudflared/config/config.yaml
            - run
          
          volumeMounts:
            - name: config
              mountPath: /etc/cloudflared/config
              readOnly: true
            - name: creds
              mountPath: /etc/cloudflared/creds/
              readOnly: true

      restartPolicy: Always

      volumes:
        - name: creds
          secret:
            secretName: homarr-cloudflared-creds
        - name: config
          configMap:
            name: cloudflared-configmap
            items:
              - key: config.yaml
                path: config.yaml
