apps/production/homarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homarr
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
  - host: "homarr.eniohomelab.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homarr
            port:
              number: 80
  tls:
    - hosts:
        - "homarr.eniohomelab.com"
      secretName: homarr-certificate-tls
